--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.27/vue.min.js"></script>
    
   </head>
-  <body>
+  <body onload="myFunction()">
     <div id="app">
       {{ message }}
 
     </div>
-    <script defer>
+    <script>
+      function myFunction() {
+
      new Vue({
   el: '#app',
   data: {
     message: 'Hello Vue.js!'
   }
 })
+      }
     </script>
   </body>
 </html>
