--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
    
   </head>
-  <body onload="myFunction()">
+  <body ng-app="myApp">
   <div ng-controller="MyCtrl">
   Hello, {{name}}!
 </div>
     <script>
-      function myFunction() {
 
     var myApp = angular.module('myApp',[]);
 
@@ -21,7 +20,7 @@
 function MyCtrl($scope) {
     $scope.name = 'Superhero';
 }
-      }
+      
     </script>
   </body>
 </html>
