--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Hello React!</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-   
+    <title>Angular QuickStart</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <!-- 1. Load libraries -->
+     <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <!-- 2. Configure SystemJS -->
+
   </head>
-  <body ng-app="myApp">
-  <div ng-controller="MyCtrl">
-  Hello, {{name}}!
-</div>
-    <script>
+  <!-- 3. Display the application -->
+  <body>
+    <my-app>Loading...</my-app>
+    <script src="app/bundle.js"></script>
 
-    var myApp = angular.module('myApp',[]);
-
-//myApp.directive('myDirective', function() {});
-//myApp.factory('myService', function() {});
-
-
-     myApp.controller('MyCtrl', ['$scope', function($scope) {
-   $scope.name = 'Superhero';
-}]);
-      
-    </script>
   </body>
 </html>
